page plan du site et fix logo navbar redirection index

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <nav class="navbar" id="navbar">
     <div class="nav-container">
         <div class="logo">
-            <img src="./images/logo5.png" alt="Logo Camille Aoulou" class="logo-img">
+            <a href="index.html"><img src="./images/logo5.png" alt="Logo Camille Aoulou" class="logo-img"></a>
         </div>
         <div class="nav-menu" id="nav-menu">
             <a href="#accueil" class="nav-link active">Accueil</a>
@@ -769,9 +769,10 @@
                     <ul class="footer-links">
                         <li><a href="#apropos">À propos</a></li>
                         <li><a href="#temoignages">Témoignages</a></li>
-                        <li><a href="#blog">Blog</a></li>
+                        <!-- <li><a href="#blog">Blog</a></li> -->
                         <li><a href="#faq">FAQ</a></li>
                         <li><a href="./mentions_legales.html">Mentions légales</a></li>
+                        <li><a href="./plan_du_site.html">Plan du site</a></li>
                     </ul>
                 </div>
 
