--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -143,7 +143,7 @@
   <nav class="navbar" id="navbar">
       <div class="nav-container">
           <div class="logo">
-              <img src="./images/logo5.png" alt="Logo Camille Aoulou" class="logo-img">
+            <a href="index.html"><img src="./images/logo5.png" alt="Logo Camille Aoulou" class="logo-img"></a>
           </div>
           <div class="nav-menu" id="nav-menu">
               <a href="./index.html" class="nav-link">Accueil</a>
@@ -355,9 +355,10 @@
                     <ul class="footer-links">
                         <li><a href="./index.html#apropos">À propos</a></li>
                         <li><a href="./index.html#temoignages">Témoignages</a></li>
-                        <li><a href="./index.html#blog">Blog</a></li>
+                        <!-- <li><a href="./index.html#blog">Blog</a></li> -->
                         <li><a href="./index.html#faq">FAQ</a></li>
                         <li><a href="./index.html#mentions-legales">Mentions légales</a></li>
+                        <li><a href="./plan_du_site.html">Plan du site</a></li>
                     </ul>
                 </div>
 
