--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -141,7 +141,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="logo">
-              <a href="index.html"><img src="./images/logo5.png" alt="Logo Camille Aoulou" class="logo-img"></a>
+              <a href="index.html"><img src="./images/logo5.png" alt="Logo OZE Communication" class="logo-img"></a>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html" class="nav-link">Accueil</a>
@@ -271,7 +271,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo3.png" alt="Logo Camille Aoulou" class="logo-img">
+                      <img src="./images/logo3.png" alt="Logo OZE Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
