fix google search console

--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-P8VVCG6VGX');
     </script>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -46,6 +46,11 @@
     <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
 
     <!-- ======= Structured Data (Organization + LocalBusiness) JSON-LD ======= -->
+                    <!-- A ajouter en dessous de "logo" "sameAs": [
+            "https://www.linkedin.com/company/ozecommunication",
+            "https://www.facebook.com/ozecommunication",
+            "https://www.instagram.com/ozecommunication"
+          ], -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -56,11 +61,7 @@
           "name": "OZE Communication",
           "url": "https://www.oze-communication.fr",
           "logo": "https://www.oze-communication.fr/images/logo5.png",
-          <!-- "sameAs": [
-            "https://www.linkedin.com/company/ozecommunication",
-            "https://www.facebook.com/ozecommunication",
-            "https://www.instagram.com/ozecommunication"
-          ], -->
+
           "contactPoint": [
             {
               "@type": "ContactPoint",
