--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
 
     <!-- ======= Structured Data (Organization + LocalBusiness) JSON-LD ======= -->
+               <!-- A ajouter en dessous de "logo" "sameAs": [
+            "https://www.linkedin.com/company/ozecommunication",
+            "https://www.facebook.com/ozecommunication",
+            "https://www.instagram.com/ozecommunication"
+          ], -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -55,11 +60,6 @@
           "name": "OZE Communication",
           "url": "https://www.oze-communication.fr",
           "logo": "https://www.oze-communication.fr/images/logo5.png",
-          <!-- "sameAs": [
-            "https://www.linkedin.com/company/ozecommunication",
-            "https://www.facebook.com/ozecommunication",
-            "https://www.instagram.com/ozecommunication"
-          ], -->
           "contactPoint": [
             {
               "@type": "ContactPoint",
