--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ======= Title (optimisé SEO) ======= -->
-    <title>OZE Communication — Agence de communication à Rennes | Faisons briller votre business</title>
+    <title>Ozé Communication — Agence de communication à Rennes | Faisons briller votre business</title>
 
     <!-- ======= Primary Meta Tags ======= -->
     <meta name="description" content="Ozé Communication, agence de communication à Rennes, accompagne les indépendants, TPE et PME : création de site web, identité visuelle, community management et organisation d’événements. Boostez votre visibilité avec nos packs sur-mesure.">
-    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, OZE Communication">
+    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, Ozé Communication">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="OZE Communication">
+    <meta name="author" content="Ozé Communication">
 
     <!-- ======= Canonical ======= -->
     <link rel="canonical" href="https://www.oze-communication.fr/">
@@ -30,17 +30,17 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
     <!-- ======= Open Graph / Social sharing ======= -->
-    <meta property="og:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta property="og:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta property="og:description" content="Création de sites web, identité visuelle, communication & événements pour entrepreneurs, TPE et PME à Rennes. Découvrez nos packs sur-mesure.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oze-communication.fr/">
     <meta property="og:image" content="https://www.oze-communication.fr/images/logo5.png">
-    <meta property="og:image:alt" content="OZE Communication - agence de communication à Rennes">
+    <meta property="og:image:alt" content="Ozé Communication - agence de communication à Rennes">
     <meta property="og:locale" content="fr_FR">
 
     <!-- ======= Twitter Card ======= -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta name="twitter:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta name="twitter:description" content="Boostez votre visibilité : création de site web, identité visuelle, community management et événementiel pour TPE/PME à Rennes.">
     <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
 
@@ -57,7 +57,7 @@
         {
           "@type": "Organization",
           "@id": "https://www.oze-communication.fr/#organization",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "url": "https://www.oze-communication.fr",
           "logo": "https://www.oze-communication.fr/images/logo5.png",
           "contactPoint": [
@@ -72,7 +72,7 @@
         },
         {
           "@type": "LocalBusiness",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "image": "https://www.oze-communication.fr/images/logo5.png",
           "@id": "https://www.oze-communication.fr/#localbusiness",
           "url": "https://www.oze-communication.fr",
@@ -152,7 +152,7 @@
 <nav class="navbar" id="navbar">
     <div class="nav-container">
         <div class="logo">
-            <a href="index.html"><img src="./images/logo5.png" alt="Logo OZE Communication" class="logo-img"></a>
+            <a href="index.html"><img src="./images/logo5.png" alt="Logo Ozé Communication" class="logo-img"></a>
         </div>
         <div class="nav-menu" id="nav-menu">
             <a href="#accueil" class="nav-link active">Accueil</a>
@@ -751,7 +751,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo3.png" alt="Logo OZE Communication" class="logo-img">
+                      <img src="./images/logo3.png" alt="Logo Ozé Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
@@ -798,14 +798,14 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contact@oze-communication.fr</span>
+                            <span>camille@oze-communication.fr</span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 OZE. Tous droits réservés.</p>
+                <p>&copy; 2025 Ozé Communication. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
