--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -205,7 +205,7 @@
                     <p><strong>Forme juridique :</strong> Entreprise individuelle / Micro-entreprise</p>
                     <p><strong>Adresse :</strong> 92 Rue de Lorient, 35000 Rennes, France</p>
                     <p><strong>Téléphone :</strong> +33 6 29 67 49 90</p>
-                    <p><strong>Email :</strong> contact@oze-communication.fr</p>
+                    <p><strong>Email :</strong> camille@oze-communication.fr</p>
                     <p><strong>Responsable publication :</strong> Camille Aoulou</p>
                 </div>
 
@@ -287,7 +287,7 @@
                         <li><strong>Droit à la portabilité :</strong> Vous pouvez demander une copie de vos données</li>
                         <li><strong>Droit d'opposition :</strong> Vous pouvez vous opposer à certains traitements</li>
                     </ul>
-                    <p>Pour exercer ces droits, contactez-nous à : <strong>contact@oze-communication.fr</strong></p>
+                    <p>Pour exercer ces droits, contactez-nous à : <strong>camille@oze-communication.fr</strong></p>
                 </div>
 
                 <!-- SECTION 6 -->
@@ -327,7 +327,7 @@
                 <!-- CONTACT POUR QUESTIONS -->
                 <div class="highlight-box">
                     <h3>Des questions sur ces mentions légales ?</h3>
-                    <p>Vous avez besoin de précisions ? Nous sommes à votre disposition. Contactez-nous à <strong>contact@oze-communication.fr</strong> ou appelez <strong>+33 6 29 67 49 90</strong>.</p>
+                    <p>Vous avez besoin de précisions ? Nous sommes à votre disposition. Contactez-nous à <strong>camille@oze-communication.fr</strong> ou appelez <strong>+33 6 29 67 49 90</strong>.</p>
                 </div>
             </div>
         </section>
@@ -386,7 +386,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contact@oze-communication.fr</span>
+                            <span>camille@oze-communication.fr</span>
                         </div>
                     </div>
                 </div>
