--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -15,11 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ======= Title (optimisé SEO) ======= -->
-    <title>Plan du Site — OZE Communication | Agence à Rennes</title>
+    <title>Plan du Site — Ozé Communication | Agence à Rennes</title>
     <!-- ======= Primary Meta Tags ======= -->
-    <meta name="description" content="Plan du site d'OZE Communication. Accédez facilement à toutes les pages et sections de notre agence de communication à Rennes.">    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, OZE Communication">
+    <meta name="description" content="Plan du site d'Ozé Communication. Accédez facilement à toutes les pages et sections de notre agence de communication à Rennes.">    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, Ozé Communication">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="OZE Communication">
+    <meta name="author" content="Ozé Communication">
 
     <!-- ======= Canonical ======= -->
     <link rel="canonical" href="https://www.oze-communication.fr/">
@@ -29,17 +29,17 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
     <!-- ======= Open Graph / Social sharing ======= -->
-    <meta property="og:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta property="og:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta property="og:description" content="Création de sites web, identité visuelle, communication & événements pour entrepreneurs, TPE et PME à Rennes. Découvrez nos packs sur-mesure.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oze-communication.fr/">
     <meta property="og:image" content="https://www.oze-communication.fr/images/logo5.png">
-    <meta property="og:image:alt" content="OZE Communication - agence de communication à Rennes">
+    <meta property="og:image:alt" content="Ozé Communication - agence de communication à Rennes">
     <meta property="og:locale" content="fr_FR">
 
     <!-- ======= Twitter Card ======= -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta name="twitter:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta name="twitter:description" content="Boostez votre visibilité : création de site web, identité visuelle, community management et événementiel pour TPE/PME à Rennes.">
     <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
 
@@ -56,7 +56,7 @@
         {
           "@type": "Organization",
           "@id": "https://www.oze-communication.fr/#organization",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "url": "https://www.oze-communication.fr",
           "logo": "https://www.oze-communication.fr/images/logo5.png",
 
@@ -72,7 +72,7 @@
         },
         {
           "@type": "LocalBusiness",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "image": "https://www.oze-communication.fr/images/logo5.png",
           "@id": "https://www.oze-communication.fr/#localbusiness",
           "url": "https://www.oze-communication.fr",
@@ -152,7 +152,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="logo">
-              <a href="index.html"><img src="./images/logo5.png" alt="Logo OZE Communication" class="logo-img"></a>
+              <a href="index.html"><img src="./images/logo5.png" alt="Logo Ozé Communication" class="logo-img"></a>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html" class="nav-link">Accueil</a>
@@ -240,7 +240,7 @@
                         <li><a href="index.html#ctaSection">Demander un devis</a></li>
                         <li><a href="index.html#contactFormSection">Formulaire de contact</a></li>
                         <li><a href="tel:+33629674990">Téléphone</a></li>
-                        <li><a href="mailto:contact@oze-communication.fr">Email</a></li>
+                        <li><a href="mailto:camille@oze-communication.fr">Email</a></li>
                     </ul>
                 </div>
 
@@ -270,7 +270,7 @@
                 <p style="margin-top: var(--spacing-base);">
                     <a href="index.html#ctaSection">Nous contacter</a> •
                     <a href="tel:+33629674990">+33 6 29 67 49 90</a> •
-                    <a href="mailto:contact@oze-communication.fr">contact@oze-communication.fr</a>
+                    <a href="mailto:camille@oze-communication.fr">camille@oze-communication.fr</a>
                 </p>
             </div>
         </section>
@@ -282,7 +282,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo3.png" alt="Logo OZE Communication" class="logo-img">
+                      <img src="./images/logo3.png" alt="Logo Ozé Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
@@ -329,14 +329,14 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contact@oze-communication.fr</span>
+                            <span>camille@oze-communication.fr</span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 OZE. Tous droits réservés.</p>
+                <p>&copy; 2025 Ozé Communication. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
