--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -15,13 +15,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ======= Title (optimisé SEO) ======= -->
-    <title>Mentions Légales — OZE Communication | Agence à Rennes</title>
+    <title>Mentions Légales — Ozé Communication | Agence à Rennes</title>
 
     <!-- ======= Primary Meta Tags ======= -->
-    <meta name="description" content="Mentions légales d'OZE Communication, agence de communication à Rennes. Consultez nos conditions d'utilisation et informations légales.">
-    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, OZE Communication">
+    <meta name="description" content="Mentions légales d'Ozé Communication, agence de communication à Rennes. Consultez nos conditions d'utilisation et informations légales.">
+    <meta name="keywords" content="agence communication Rennes, création site web, identité visuelle, community management, événementiel entreprise, pack visibilité, pack lancement, Ozé Communication">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="OZE Communication">
+    <meta name="author" content="Ozé Communication">
 
     <!-- ======= Canonical ======= -->
     <link rel="canonical" href="https://www.oze-communication.fr/">
@@ -31,17 +31,17 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
     <!-- ======= Open Graph / Social sharing ======= -->
-    <meta property="og:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta property="og:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta property="og:description" content="Création de sites web, identité visuelle, communication & événements pour entrepreneurs, TPE et PME à Rennes. Découvrez nos packs sur-mesure.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oze-communication.fr/">
     <meta property="og:image" content="https://www.oze-communication.fr/images/logo5.png">
-    <meta property="og:image:alt" content="OZE Communication - agence de communication à Rennes">
+    <meta property="og:image:alt" content="Ozé Communication - agence de communication à Rennes">
     <meta property="og:locale" content="fr_FR">
 
     <!-- ======= Twitter Card ======= -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="OZE Communication — Agence de communication à Rennes">
+    <meta name="twitter:title" content="Ozé Communication — Agence de communication à Rennes">
     <meta name="twitter:description" content="Boostez votre visibilité : création de site web, identité visuelle, community management et événementiel pour TPE/PME à Rennes.">
     <meta name="twitter:image" content="https://www.oze-communication.fr/images/logo5.png">
 
@@ -58,7 +58,7 @@
         {
           "@type": "Organization",
           "@id": "https://www.oze-communication.fr/#organization",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "url": "https://www.oze-communication.fr",
           "logo": "https://www.oze-communication.fr/images/logo5.png",
 
@@ -74,7 +74,7 @@
         },
         {
           "@type": "LocalBusiness",
-          "name": "OZE Communication",
+          "name": "Ozé Communication",
           "image": "https://www.oze-communication.fr/images/logo5.png",
           "@id": "https://www.oze-communication.fr/#localbusiness",
           "url": "https://www.oze-communication.fr",
@@ -154,7 +154,7 @@
   <nav class="navbar" id="navbar">
       <div class="nav-container">
           <div class="logo">
-            <a href="index.html"><img src="./images/logo5.png" alt="Logo OZE Communication" class="logo-img"></a>
+            <a href="index.html"><img src="./images/logo5.png" alt="Logo Ozé Communication" class="logo-img"></a>
           </div>
           <div class="nav-menu" id="nav-menu">
               <a href="./index.html" class="nav-link">Accueil</a>
@@ -177,7 +177,7 @@
         <section class="legal-hero">
             <div>
                 <h1>Mentions Légales</h1>
-                <p>Informations légales et conditions d'utilisation d'OZE Communication</p>
+                <p>Informations légales et conditions d'utilisation d'Ozé Communication</p>
             </div>
         </section>
 
@@ -201,7 +201,7 @@
                 <!-- SECTION 1 -->
                 <div class="legal-section" id="editeur">
                     <h2>1. Éditeur du site</h2>
-                    <p><strong>Dénomination :</strong> OZE Communication</p>
+                    <p><strong>Dénomination :</strong> Ozé Communication</p>
                     <p><strong>Forme juridique :</strong> Entreprise individuelle / Micro-entreprise</p>
                     <p><strong>Adresse :</strong> 92 Rue de Lorient, 35000 Rennes, France</p>
                     <p><strong>Téléphone :</strong> +33 6 29 67 49 90</p>
@@ -234,11 +234,11 @@
                 <div class="legal-section" id="propriete">
                     <h2>3. Propriété intellectuelle</h2>
                     <h3>Droits d'auteur</h3>
-                    <p>L'ensemble du contenu de ce site (textes, images, vidéos, logos, graphismes, mise en page) est la propriété exclusive d'OZE Communication ou de ses contributeurs, sauf mention contraire.</p>
+                    <p>L'ensemble du contenu de ce site (textes, images, vidéos, logos, graphismes, mise en page) est la propriété exclusive d'Ozé Communication ou de ses contributeurs, sauf mention contraire.</p>
                     <p>Toute reproduction, représentation, modification ou exploitation du contenu, en totalité ou en partie, sans autorisation préalable écrite, est strictement interdite et pourra faire l'objet de poursuites judiciaires.</p>
 
                     <h3>Marques et logos</h3>
-                    <p>Le logo "OZE Communication" et l'ensemble de nos marques sont des marques déposées et protégées. Leur utilisation sans autorisation est interdite.</p>
+                    <p>Le logo "Ozé Communication" et l'ensemble de nos marques sont des marques déposées et protégées. Leur utilisation sans autorisation est interdite.</p>
 
                     <h3>Contenus tiers</h3>
                     <p>Les contenus tiers (images externes, vidéos, polices) sont utilisés conformément à leurs licences respectives. Pour toute question concernant l'origine d'un contenu, n'hésitez pas à nous contacter.</p>
@@ -248,16 +248,16 @@
                 <div class="legal-section" id="responsabilite">
                     <h2>4. Limitation de responsabilité</h2>
                     <h3>Disponibilité du site</h3>
-                    <p>OZE Communication met tous les efforts pour assurer la disponibilité du site 24h/24, 7j/7. Cependant, nous ne pouvons garantir une disponibilité permanente et nous déclinons toute responsabilité en cas d'interruption, quelle qu'en soit la cause (maintenance, problèmes techniques, force majeure, etc.).</p>
+                    <p>Ozé Communication met tous les efforts pour assurer la disponibilité du site 24h/24, 7j/7. Cependant, nous ne pouvons garantir une disponibilité permanente et nous déclinons toute responsabilité en cas d'interruption, quelle qu'en soit la cause (maintenance, problèmes techniques, force majeure, etc.).</p>
 
                     <h3>Exactitude des informations</h3>
-                    <p>Bien que nous nous efforcions de maintenir les informations à jour et exactes, OZE Communication ne peut garantir l'absence d'erreurs, d'imprécisions ou d'omissions. Les informations sont fournies "en l'état" sans aucune garantie.</p>
+                    <p>Bien que nous nous efforcions de maintenir les informations à jour et exactes, Ozé Communication ne peut garantir l'absence d'erreurs, d'imprécisions ou d'omissions. Les informations sont fournies "en l'état" sans aucune garantie.</p>
 
                     <h3>Limitation des dommages</h3>
-                    <p>En aucun cas, OZE Communication ne sera responsable des dommages directs, indirects, incidents ou consécutifs résultant de l'utilisation ou de l'impossibilité d'utilisation du site, même en cas de notification de la possibilité de tels dommages.</p>
+                    <p>En aucun cas, Ozé Communication ne sera responsable des dommages directs, indirects, incidents ou consécutifs résultant de l'utilisation ou de l'impossibilité d'utilisation du site, même en cas de notification de la possibilité de tels dommages.</p>
 
                     <h3>Liens externes</h3>
-                    <p>Le site peut contenir des liens vers des sites externes. OZE Communication ne contrôle pas ces sites et ne peut être tenue responsable de leur contenu ou de leur disponibilité.</p>
+                    <p>Le site peut contenir des liens vers des sites externes. Ozé Communication ne contrôle pas ces sites et ne peut être tenue responsable de leur contenu ou de leur disponibilité.</p>
                 </div>
 
                 <!-- SECTION 5 -->
@@ -276,7 +276,7 @@
                     <p><strong>Durée de conservation :</strong> Vos données sont conservées 3 ans à compter de notre dernier échange. Vous pouvez demander leur suppression à tout moment.</p>
 
                     <h3>Responsable du traitement</h3>
-                    <p>Camille Aoulou - OZE Communication, 92 Rue de Lorient, 35000 Rennes</p>
+                    <p>Camille Aoulou - Ozé Communication, 92 Rue de Lorient, 35000 Rennes</p>
 
                     <h3>Vos droits</h3>
                     <p>Conformément à la loi RGPD, vous disposez des droits suivants :</p>
@@ -315,7 +315,7 @@
                     <p>Tout litige relatif à ce site sera de la compétence exclusive des tribunaux français, et plus particulièrement du Tribunal de Commerce de Rennes.</p>
 
                     <h3>Conformité légale</h3>
-                    <p>OZE Communication s'engage à respecter :</p>
+                    <p>Ozé Communication s'engage à respecter :</p>
                     <ul>
                         <li>La loi Informatique et Libertés</li>
                         <li>Le Règlement Général sur la Protection des Données (RGPD)</li>
@@ -339,7 +339,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                      <img src="./images/logo3.png" alt="Logo OZE Communication" class="logo-img">
+                      <img src="./images/logo3.png" alt="Logo Ozé Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
                         Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
@@ -377,10 +377,6 @@
                     <h3 class="footer-title">Contact</h3>
                     <div class="contact-info">
                         <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>92 Rue de Lorient<br>35000 Rennes, France</span>
-                        </div>
-                        <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <span>+33 6 29 67 49 90</span>
                         </div>
@@ -393,7 +389,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 OZE. Tous droits réservés.</p>
+                <p>&copy; 2025 Ozé Communication. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
