enlever decoration sur telephone footer mobile avec balise meta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
 
     <!-- ======= Title (optimisé SEO) ======= -->
     <title>Ozé Communication — Agence de communication à Rennes | Faisons briller votre business</title>
@@ -754,13 +755,11 @@
                       <img src="./images/logo3.png" alt="Logo Ozé Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
-                        Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
+                        Ozé communication - votre partenaire de confiance pour faire rayonner vos projets.
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/oze.communication/" target="_blank" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
 
