--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
 
     <!-- ======= Title (optimisé SEO) ======= -->
     <title>Mentions Légales — Ozé Communication | Agence à Rennes</title>
@@ -342,7 +343,7 @@
                       <img src="./images/logo3.png" alt="Logo Ozé Communication" class="logo-img">
                     </div>
                     <p class="footer-description">
-                        Votre partenaire de confiance pour transformer vos ambitions entrepreneuriales en succès concrets.
+                        Ozé communication - votre partenaire de confiance pour faire rayonner vos projets.
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
