--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </span>
             <span class="title-line accent">votre business</span>
         </h1>
-        <p class="hero-subtitle">Chez Ozé communication, nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l’essentiel : votre activité.</p>
+        <p class="hero-subtitle">Chez <span class="dream">Ozé</span> Communication, nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l’essentiel : votre activité.</p>
         <div class="hero-buttons">
             <a href="#packs" class="btn btn-primary">Découvrir nos packs</a>
             <a href="#apropos" class="btn btn-secondary">Pourquoi nous choisir ?</a>
