--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Ozé Communication" />
-    <link rel="manifest" href="/images/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
 
 </head>
 
